--- a/.gitmodules
+++ b/.gitmodules
@@ -17,7 +17,7 @@
 	path = bundle/ctrip
 	url = https://github.com/kien/ctrlp.vim.git
 [submodule "bundles/tagbar"]
-	path = bundles/tagbar
+	path = bundle/tagbar
 	url = git://github.com/majutsushi/tagbar
 [submodule "bundle/gnupg"]
 	path = bundle/gnupg
@@ -28,3 +28,6 @@
 [submodule "bundle/nerdcommenter"]
 	path = bundle/nerdcommenter
 	url = https://github.com/scrooloose/nerdcommenter.git
+[submodule "bundle/powerline"]
+	path = bundle/powerline
+	url = https://github.com/Lokaltog/vim-powerline.git
